syntax = "proto3";
package apis;
import "apis/v1alpha1/rpc_document.proto";
import "apis/v1alpha1/rpc_user.proto";
import "google/api/annotations.proto"; //Ignore error. buf has file.


service SimpleSedge {
    // Ingest a new data object for processing
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
      option (google.api.http) = {
          post : "/v1alpha1/create_user"
          body : "*"
      };
    }

    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
        option (google.api.http) = {
            post : "/v1alpha1/login_user"
            body : "*"
        };
    }

    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
        option (google.api.http) = {
            post : "/v1alpha1/update_user"
            body : "*"
        };
    }

    rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse) {
        option (google.api.http) = {
            get : "/v1alpha1/verify_email"
        };
    }

    rpc ListDocuments (ListDocumentsRequest) returns (ListDocumentsResponse) {
        option (google.api.http) = {
            get : "/v1alpha1/list_documents"
        };
    }

    rpc IngestDocument(IngestDocumentRequest) returns (IngestDocumentResponse) {
      option (google.api.http) = {
        post : "/v1alpha1/processing/ingest_document"
        body : "*"
      };
    };
  }